@@ -15,7 +15,15 @@
 
 
     <properties>
-        <skipGPULlamaITs>false</skipGPULlamaITs>
+        <tornado.sdk>${env.TORNADO_SDK}</tornado.sdk>
+        <test.class>GPULlama3ChatModelIT</test.class>
+        <maven.test.skip>true</maven.test.skip>
+        <maven.compiler.testSkip>true</maven.compiler.testSkip>
+        <skipTests>true</skipTests>
+        <skipITs>true</skipITs>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>21</maven.compiler.release>
     </properties>
 
     <dependencies>
@@ -77,6 +85,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-console-standalone</artifactId>
+            <version>1.10.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>mockwebserver</artifactId>
             <scope>test</scope>
@@ -90,27 +105,118 @@
 
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>run-tests</id>
+            <properties>
+                <maven.test.skip>false</maven.test.skip>  <!-- Override to enable -->
+                <maven.compiler.testSkip>false</maven.compiler.testSkip>  <!-- Override to enable -->
+                <skipTests>false</skipTests>  <!-- Override to enable -->
+                <skipITs>false</skipITs>  <!-- Override to enable -->
+            </properties>
+            <build>
+                <defaultGoal>clean generate-test-resources compile test-compile exec:exec</defaultGoal>
+            </build>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
+                <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
+                        <id>build-test-classpath</id>
+                        <phase>generate-test-resources</phase>
                         <goals>
-                            <goal>test-jar</goal>
+                            <goal>build-classpath</goal>
+                        </goals>
+                        <configuration>
+                            <includeScope>test</includeScope>
+                            <outputProperty>test.classpath</outputProperty>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Skip standard tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M9</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>default-testCompile</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>testCompile</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- TornadoVM Test Runner -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
                 <configuration>
-                    <skipTests>${skipGPULlamaITs}</skipTests>
+                    <executable>${env.JAVA_HOME}/bin/java</executable>
+                    <arguments>
+                        <argument>-server</argument>
+                        <argument>-XX:+UnlockExperimentalVMOptions</argument>
+                        <argument>-XX:+EnableJVMCI</argument>
+                        <argument>-XX:-UseCompressedClassPointers</argument>
+                        <argument>--enable-preview</argument>
+                        <argument>-Xms20g</argument>
+                        <argument>-Xmx20g</argument>
+                        <argument>-Djava.library.path=${tornado.sdk}/lib</argument>
+                        <argument>-Djdk.module.showModuleResolution=false</argument>
+                        <argument>--module-path=.:${tornado.sdk}/share/java/tornado</argument>
+                        <argument>-Dtornado.load.api.implementation=uk.ac.manchester.tornado.runtime.tasks.TornadoTaskGraph</argument>
+                        <argument>-Dtornado.load.runtime.implementation=uk.ac.manchester.tornado.runtime.TornadoCoreRuntime</argument>
+                        <argument>-Dtornado.load.tornado.implementation=uk.ac.manchester.tornado.runtime.common.Tornado</argument>
+                        <argument>-Dtornado.load.annotation.implementation=uk.ac.manchester.tornado.annotation.ASMClassVisitor</argument>
+                        <argument>-Dtornado.load.annotation.parallel=uk.ac.manchester.tornado.api.annotations.Parallel</argument>
+                        <argument>-Dtornado.tvm.maxbytecodesize=65536</argument>
+                        <argument>-Duse.tornadovm=true</argument>
+                        <argument>-Dtornado.threadInfo=false</argument>
+                        <argument>-Dtornado.debug=false</argument>
+                        <argument>-Dtornado.fullDebug=false</argument>
+                        <argument>-Dtornado.printKernel=false</argument>
+                        <argument>-Dtornado.print.bytecodes=false</argument>
+                        <argument>-Dtornado.device.memory=7GB</argument>
+                        <argument>-Dtornado.profiler=false</argument>
+                        <argument>-Dtornado.log.profiler=false</argument>
+                        <argument>-Dtornado.enable.fastMathOptimizations=true</argument>
+                        <argument>-Dtornado.enable.mathOptimizations=false</argument>
+                        <argument>-Dtornado.enable.nativeFunctions=fast</argument>
+                        <argument>-Dtornado.loop.interchange=true</argument>
+                        <argument>-Dtornado.eventpool.maxwaitevents=32000</argument>
+                        <argument>-Dtornado.opencl.compiler.flags=-cl-denorms-are-zero -cl-no-signed-zeros -cl-finite-math-only</argument>
+                        <argument>--upgrade-module-path</argument>
+                        <argument>${tornado.sdk}/share/java/graalJars</argument>
+                        <argument>@${tornado.sdk}/etc/exportLists/common-exports</argument>
+                        <argument>@${tornado.sdk}/etc/exportLists/opencl-exports</argument>
+                        <argument>--add-modules</argument>
+                        <argument>ALL-SYSTEM,tornado.runtime,tornado.annotation,tornado.drivers.common,tornado.drivers.opencl</argument>
+                        <argument>-cp</argument>
+                        <argument>${project.build.outputDirectory}:${project.build.testOutputDirectory}:${test.classpath}</argument>
+                        <argument>org.junit.platform.console.ConsoleLauncher</argument>
+                        <argument>--scan-classpath</argument>
+                        <argument>--include-classname</argument>
+                        <argument>.*IT</argument>
+                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
